# siphon-http

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  mkdocs.yml
.github/workflows/: ci.yaml  pages.yaml  release.yaml
benches/: parse.rs
deploy/: Dockerfile  README.md  docker-compose.yml  http.example.yaml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
docs/: configuration.md  deployment.md  index.md  performance.md  script-api.md
docs/cookbook/: index.md  proxy.md  rest-api.md  trunk-registry.md  webhook.md  whatsapp-cloud-api.md
examples/: leak_check.rs  nrf_5g.py  proxy.py  rest_api.py  trunk_registry.py  webhook.py  whatsapp_cloud_api.py
harness/: Cargo.toml  README.md  bench_echo.py  http.yaml  run.sh  siphon.bench.yaml
harness/src/: main.rs
python/: http.py
scripts/: check_sdk_parity.py  mem_leak_test.sh
src/: client.rs  config.rs  install.rs  lib.rs  parse.rs  request.rs  response.rs  runtime.rs
tests/: h2.rs  parse.rs
tests/python/: test_whatsapp_cloud_api.py
