[package]
name = "siphon-http"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "HTTP/HTTPS addon for siphon — exposes a scriptable `http` namespace to Python"
authors = ["SIPhon Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/siphon-project/siphon-http"
homepage = "https://github.com/siphon-project/siphon-sip"
keywords = ["http", "https", "siphon", "rest", "axum"]
categories = ["network-programming", "web-programming"]
# Operator-facing assets (deployment templates, Python examples, load harness)
# aren't part of the published crate.
exclude = ["deploy/", "examples/*.py", "harness/"]

# siphon extension: a composing siphon binary registers the `namespace` and
# `task` hooks at startup. Scripts then handle inbound HTTP (`@http.route`) and
# call out over HTTP (`http.Client`) through the `siphon.http` namespace.

[features]
default = []

[dependencies]
# Canonical repo URL after the siphon → siphon-sip rename. The URL string must
# match byte-for-byte across every crate that depends on siphon-sip in one build
# graph (e.g. siphon-bin), or cargo resolves two separate copies. branch=main
# tracks the latest lib; the consumer's Cargo.lock still pins a concrete SHA.
siphon-sip = { git = "https://github.com/siphon-project/siphon-sip", branch = "main" }
# pyo3 must track siphon-sip's pin (currently 0.29): both link the `python`
# native library, and Cargo refuses two versions of a `links` crate in one graph.
pyo3 = { version = "0.29", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["macros", "matched-path"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "limit", "set-header", "timeout"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
matchit = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "http2"] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"

async-trait = "0.1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false

[package.metadata.docs.rs]
all-features = true
